[tool.poetry]
name = "stackenblochen"
version = "0.1.0"
description = "Random shit"
authors = ["Remigiusz Świc <remigiusz@swic.net.pl>"]

[tool.poetry.dependencies]
python = "3.10.0"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
prometheus-client = "^0.12.0"
starlette-exporter = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
bandit = "^1.7.0"
safety = "^1.10.3"
mypy = "^0.910"
black = "^21.10b0"
coverage = "^6.1.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
